--- a/README_presentation.html
+++ b/README_presentation.html
@@ -63,7 +63,7 @@ See the end of the file for license conditions.
 See license.txt for mirage335_author license conditions.
 
 
-A program able to call other programs and extensively self-test. Compatible nominally with at least typical Unix-similar and MSW distributions.
+Resume, recruiting, policy, demos, etc, regarding &#39;author&#39; mirage335.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
 _t '
@@ -77,7 +77,27 @@ if false; then true; # -->
 <!-- # --><h1>Reading</h1>
 <!--
 fi
- '_' ' '
+ '_picture' 'zzLib_895-reference/demo/TazStiff_owner.jpg' '25%'
+if false; then true; # -->
+<!-- # --><img width="25%" src="zzLib_895-reference/demo/TazStiff_owner.jpg" style="float: right;margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Recommended reading includes...
+* document-biography.pdf
+* document-recruiting-complete.pdf
+* document-numbering.pdf
+* zzLib_895-reference/from_uTST (image gallery)
+* zzLib_895-reference/demo (image gallery)
+* zzLib_895-reference/demo/_misc (image gallery)
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
+_r '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q -->
+<iframe src="./index.html" width=95% height=720></iframe>
+<!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_image' 'zzLib_895-reference/from_uTST/neuralBits-zEXCERPTED-diagram-picture.png' '40%'
 if false; then true; # -->
 <!-- # --><img width="40%" src="zzLib_895-reference/from_uTST/neuralBits-zEXCERPTED-diagram-picture.png" style="margin: 0 0 0 15px;border: 5px solid transparent;">
@@ -103,17 +123,6 @@ if false; then true; # -->
 <!-- # --><img width="80%" src="zzLib_895-reference/from_uTST/cognitionSplicer-topographicMapping.png" style="margin: 0 0 0 15px;border: 5px solid transparent;">
 <!--
 fi
-_r '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q -->
-<iframe src="./index.html" width=95% height=720></iframe>
-<!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
-'
-_t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
-
-
-<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
-'
  '_heading1' 'Usage'
 if false; then true; # -->
 <!-- # --><h1>Usage</h1>
@@ -142,7 +151,8 @@ if false; then true; # -->
 <!--
 fi
 _t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;"> 
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Mostly uses &#39;scriptedIllustrator&#39; . Some files may use resources from other files, using path variables defined by &#39;./zzLib_800-documents/consolidateVariables.sh&#39; .
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
 _t '
