Changes based on advice and copy editing by Julia Longtin. Upstream from ubiquitous bash .

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ Phone: 1-301-660-6414
 
 Typically available between 10:00-22:00 EDT and often beyond.
 
-Please *do* text, leave voicemail, call multiple times, contact through multiple channels (eg. both IRC and Discord), repeatedly send multiple emails, etc. Due to persistent automation spam everywhere, such proof of cognition is helpful. For everyone already regularly contancting me, bringing my attention to any new persons or opportunities, is always very much appreciated also.
+Please *do* text, leave voicemail, call multiple times, contact through multiple channels (eg. both IRC and Discord), repeatedly send multiple emails, etc. Due to persistent automation spam everywhere, such proof of cognition is helpful. For everyone already regularly contacting me, bringing my attention to any new persons or opportunities, is always very much appreciated also.
 
 If communications are somehow saturated, or many opportunities arise, priority will go to people who can help make progress on the &#39;roadmap and timeline&#39; under the &#39;universalTechnologySpecificationTextbook&#39; (&#39;uTST&#39;) .
 
@@ -604,9 +604,10 @@ fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Author &#39;mirage335&#39; supports any reasonable path, valuing that many other persons have reasonable ideas, often adding new abilities and imagination.
 
-For diversity, bring an apparently unique emphasis on pragmatism, possibilities, and brevity, so more is available for more people to pursue their own unique interests.
-For equity, continue to unequivocally oppose and reverse any bias whenever credible evidence is found, as well as support others who find, oppose, or reverse, bias.
-For inclusiveness, press for the realization that people with different interests and backgrounds are actually uniquely valuable and can in fact coexist in the same world and universe.
+For diversity, bring an apparently unique emphasis on possibilities, pragmatism, and brevity, so more is accessible for more people everywhere to pursue their own unique interests.
+For equity, continue to unequivocally oppose and reverse any bias wherever credible evidence is found, to support others who find, oppose, or reverse, bias, so people can obtain the means and opportunities to pursue ideas that help everyone.
+For inclusiveness, press for the realization that people with different interests and backgrounds are actually uniquely valuable and can in fact coexist in the same world.
+
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
 _t '
@@ -663,9 +664,13 @@ if false; then true; # -->
 <!--
 fi
 _t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">*) Robust containment of complete hardware and software design toolchains with interprocess-communication within single filesystem directories.
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+*) Robust containment of complete hardware and software design toolchains with interprocess-communication within single filesystem directories.
+*) Compatibility layer for applications, legacy multiplatform (ie. MSW), cloud, virtualization, and LiveCD/LiveUSB.
 
-*) Legacy multiplatform (ie. MSW), cloud, virtualization, and LiveCD/LiveUSB compatibility.
+*) Interoperable libraries for use within hardware and software design toolchains.
+*) Compatible interfaces for hardware and software designs.
+
 *) Strategic planning, technical point-of-diminishing-returns due diligence.
 *) Extensively self-taught, accustomed to efficiently exploring uncharted territory.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
@@ -832,7 +837,7 @@ Virtualization
 	Cryptography.
 Cryptography
 
-	Signal Processing, statistical confidence testing, psychometrics.
+	Signal processing, statistical confidence testing, psychometrics.
 Filter Design
 Infinite Impulse Response
 Statistics
@@ -1051,7 +1056,7 @@ if false; then true; # -->
 fi
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
-Built by &#39;ubiquitous_bash&#39;. Hibernation Snapshot, SaveState (VM features on any virtualization backend or physical computer hardware). Bootable disk images from same build also will be used as development computer (x64), end-user computer  (x64), cloud services  (x64) for thin-client, and embedded (RasPi) OS distribution.
+Built by &#39;ubiquitous_bash&#39;. Hibernation Snapshot, SaveState (VM features on any virtualization backend or physical computer hardware). Bootable disk images from same build also will be used as development computer (x64), end-user computer (x64), cloud services (x64) for thin-client, and embedded (RasPi) OS distribution.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading3' 'TazIntermediate'
@@ -2671,7 +2676,7 @@ if false; then true; # -->
 <!--
 fi
 _t '
-scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Prefer a balanced view rather than divisive politics. Aside from distinct ethical issues (including anti-harassment), which among other possible criteria, are least ambiguous, least legitimately controversial, least political, and least geopolitical, I have no particular interest in Democrats vs Republicans, Unions vs No Unions, monetary policy, or irrational voting issues. If anything, I would prefer to see all sides of US politics trend towards mildness, investment, and economics.
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">Prefer a balanced view rather than divisive politics. Aside from distinct ethical issues (including anti-harassment), which among other possible criteria, are least divisive, least ambiguous, least legitimately controversial, least political, and least geopolitical, I have no particular interest in Democrats vs Republicans, Unions vs No Unions, monetary policy, or irrational voting issues. If anything, I would prefer to see all sides of US politics trend towards mildness, investment, and economics.
 
 My primary political concern will be, has been, and is expedient developer access to use and share with the world the full benefits of self-driving AI, Virtual Reality, neural interfaces, etc.
 
@@ -2791,7 +2796,9 @@ https://en.wikipedia.org/wiki/Sinking_of_the_Titanic#Preparing_to_abandon_ship
 
 
 https://news.yahoo.com/danger-supreme-court-undercutting-biden-200455779.html
+https://www.govinfo.gov/content/pkg/FR-2021-11-05/pdf/2021-23643.pdf
 	&#39;On its surface this is a case about vaccine mandates, but it is also a proxy war over the heart of the administrative state. If the Court applies the major questions doctrine in this case, that precedent will be used to constrain other agencies from acting in new, unprecedented dramatic situations, forcing them to wait for explicit authorization from Congress to act; authorization that may never come. Depending on what you think of the balance of power between Congress and the Executive that could be good or bad. But, if as it appears likely, the conservative Justices will block the ETS on this or an adjacent theory, the immediate casualty of this proxy war is the public’s health. The rule is estimated to save over 6,500 lives and prevent 250,00 hospitalizations over six months, although these estimates were pre-Omicron.&#39;
+	&#39;prevent over 250,000 hospitalizations&#39; (used article has correct quote)
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
  '_heading3' 'POLICY_PROMOTION_nonproliferation'
