--- a/README.html
+++ b/README.html
@@ -174,6 +174,17 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 In addition to any stated acknowledgements in the documents here, which may cite contributors or other works, the repository history may also acknowledge authors, contributors, and other works. Normally, explicit citations will nevertheless be added to documents here under an &#39;acknowledgement&#39; or similar heading, unless the documents are of narrow, small, non-research, and/or similar purpose for which such would not be usual apparent practice (eg. a &#39;resume&#39;).
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+ '_heading1' 'ACKNOWLEDGEMENT - Contributors'
+if false; then true; # -->
+<!-- # --><h1>ACKNOWLEDGEMENT - Contributors</h1>
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Supplementing any acknowledgements elsewhere of contributors to documents here.
+* Julia Longtin. Especially for advice and copy editing.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_heading1' 'Copyright'
 if false; then true; # -->
 <!-- # --><h1>Copyright</h1>
