--- a/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting_presentation.html
+++ b/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting_presentation.html
@@ -386,6 +386,23 @@ Self-owned technology business. Especially offers expertise in deploying own ope
 PatchRap and CoreAutoSSH are notable successes of Soaring Industries LLC.
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+ '_picture' '../../../../zzLib_895-reference/emblems/logo_distLLC.png' '10%'
+if false; then true; # -->
+<!-- # --><img width="10%" src="../../../../zzLib_895-reference/emblems/logo_distLLC.png" style="float: right;margin: 0 0 0 15px;border: 5px solid transparent;">
+<!--
+fi
+ '_heading3' 'Soaring Distributions LLC - Manager'
+if false; then true; # -->
+<!-- # --><h3>Soaring Distributions LLC - Manager</h3>
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Apr2022 - Present
+https://soaringdistributions.github.io/site_distLLC/
+Distribution of some (may be mostly if not entirely software, mostly if not entirely FLOSS) products.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_' '_heading3' 'Director - Self'
  '_' '_t' 'Aug2010 - Present
 Self-taught and self-directed, particularly keen to develop open-source fabrication and communication technologies for public benefit.'
