Draft - add Sponsor GitHub .

--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@ scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-to
 IRC WebChat: https://kiwiirc.com/nextclient/irc.libera.chat/##mirage335
 Discord: https://discord.gg/Tm9Am8Yt
 Patreon: https://www.patreon.com/mirage335
+Sponsor GitHub: https://github.com/sponsors/mirage335
 YouTube: https://www.youtube.com/channel/UC-hYbYGjhQdoF18U5VRUH9g
 Github: https://github.com/mirage335
 Email: spamfreemirage335 &#39; a T&#39; gmail &#39;dot &#39; com
@@ -618,7 +619,6 @@ Discovering such discouragement is difficult enough, tolerating such discouragem
 '
 _t '
 scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
-
 
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
