--- a/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting.html
+++ b/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting.html
@@ -197,7 +197,7 @@ Discord: https://discord.gg/Tm9Am8Yt
 Patreon: https://www.patreon.com/mirage335
 Sponsor GitHub: https://github.com/sponsors/mirage335
 YouTube: https://www.youtube.com/channel/UC-hYbYGjhQdoF18U5VRUH9g
-Github: https://github.com/mirage335
+GitHub: https://github.com/mirage335
 Email: spamfreemirage335 &#39; a T&#39; gmail &#39;dot &#39; com
 Phone: 1-301-660-6414
 
