--- a/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting_presentation.html
+++ b/zzLib_800-documents/050-sorting/100-draft/105-recruiting/105-recruiting_presentation.html
@@ -334,6 +334,18 @@ Represented both Makersmiths and HacDC at the "Nation of Makers" gathering.
 Please support your local hackerspace!
 <!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
 '
+ '_heading3' 'Creative 3D Technologies - Senior Hardware Designer'
+if false; then true; # -->
+<!-- # --><h3>Creative 3D Technologies - Senior Hardware Designer</h3>
+<!--
+fi
+_t '
+scriptedIllustrator_markup_uk4uPhB663kVcygT0q --><!-- # --><pre style="margin-top: 0px;margin-bottom: 0px;white-space: pre-wrap;">
+Aug2022 - Present
+https://creative3dtechnologies.com/
+Helping a great company improve on their product (awesome new 3D printers). Emphasis on both optimizing for customer needs and bringing robust 3D printing to the world through design readiness for high volume production.
+<!-- # --></pre><!-- scriptedIllustrator_markup_uk4uPhB663kVcygT0q
+'
  '_heading3' 'ZXYPro, 3D Connected Printing - Software Technologist (formerly Chief Technology Officer)'
 if false; then true; # -->
 <!-- # --><h3>ZXYPro, 3D Connected Printing - Software Technologist (formerly Chief Technology Officer)</h3>
@@ -1882,7 +1894,7 @@ _default_procedure() {
 	rm -f "$scriptLib"/"$1".pdf > /dev/null 2>&1
 }
 _default() {
-	! type -p qalculate > /dev/null 2>&1 && exit 1
+	! type -p qalculate > /dev/null 2>&1 && ! type -p qalc > /dev/null 2>&1
 	_solve() {
 		_qalculate_solve "$@"
 	}
